--- a/backend/docker_compose/fastapi/docker-compose-prod.yml
+++ b/backend/docker_compose/fastapi/docker-compose-prod.yml
@@ -7,9 +7,9 @@ services:
       context: ../..
       dockerfile: docker_compose/fastapi/Dockerfile
     volumes:
-      - ../../fastapi:/app/fastapi
+      - ../../fastapi_service:/app/fastapi_service
     restart: unless-stopped
-    command: 'sh -c "python fastapi/main.py --host 0.0.0.0 --port 8001"'
+    command: 'sh -c "python fastapi_service/main.py --host 0.0.0.0 --port 8001"'
     container_name: fastapi-prod
     networks:
       - backend-prod
