--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "three": "^0.176.0",
