--- a/backend/Makefile
+++ b/backend/Makefile
@@ -83,6 +83,11 @@ down-all:
 	$(MAKE) down-monitoring
 	$(MAKE) down-fastapi
 
+down-all-deploy:
+	$(MAKE) down-db
+	$(MAKE) down-django
+	$(MAKE) down-fastapi
+
 up-all-without-monitoring: check-network
 	$(MAKE) up-db
 	$(MAKE) up-django
@@ -95,6 +100,11 @@ up-all-no-cache-without-monitoring: check-network
 	$(MAKE) up-django-no-cache
 	$(MAKE) up-pgadmin
 	$(MAKE) up-adminer
+	$(MAKE) up-fastapi
+
+up-all-no-cache-without-monitoring-deploy: check-network
+	$(MAKE) up-db-no-cache
+	$(MAKE) up-django-no-cache
 	$(MAKE) up-fastapi
 
 up-all-no-cache-without-monitoring-prod: check-network-prod
